🐛 FIX: Prevent Module Overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -168,6 +168,8 @@ $bg-transparent-hover: rgba( 0, 0, 0, .75 );
 		font-size: 1.2rem;
 		line-height: 1.75rem;
 
+		overflow: hidden;
+
 		div.content-module-text {
 			margin-top: 1rem;
 		}
